[project]
name = "my-project"
version = "0.1"
dependencies = [
    "furo",
    "linkify-it-py",
    "myst-parser",
    "sphinx-autobuild",
    "sphinx-copybutton",
    "sphinx-design",
    "sphinx-prompt",
    "sphinx",
    "sphinxcontrib-mermaid",
]

[project.optional-dependencies]
dev = [
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
